# mate-submodules

./: Makefile.am  configure.ac  index.html
2021-12-11-220454-3832-1@6c88bc032a93_lgpl-copying-lib@6c88bc032a93_lgpl-copying-lib/: index.html  report-52a36a.html  report-64f244.html
2021-12-14-162141-3829-1@956ef478417e_shorten-64-to-32/: index.html  report-6d07d6.html  report-af3519.html
2021-12-14-162150-4687-cppcheck@956ef478417e_shorten-64-to-32/: 1.html
libegg/: eggdesktopfile.c  eggdesktopfile.h  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  eggtreemultidnd.c  eggtreemultidnd.h
